# datamodel-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
examples/: deser.rs  treeview.rs
scripts/: README.md  gen_versioned_apidump.sh
scripts/changes/: API-Dump-0.506.2.5060610.json
src/: lib.rs  versioned_instances.rs
src/datatypes/: brickcolor.rs  color3.rs  content.rs  datetime.rs  mod.rs  vector2.rs
