[package]
name = "datamodel_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
id_tree = "1.8.0"
mlua = { version = "0.11.4", features = ["luau"] }
rbx_dom_weak = { git = "https://github.com/rojo-rbx/rbx-dom.git", version = "4.0.0" }
rbx_types = { git = "https://github.com/rojo-rbx/rbx-dom.git", version = "3.0.0" }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
rbx_binary = { git = "https://github.com/rojo-rbx/rbx-dom.git" }
